--- a/areas/core/BTF_02_proposed_usage.org
+++ b/areas/core/BTF_02_proposed_usage.org
@@ -180,10 +180,10 @@ stg mail --version="bpf-next V1" --cc meup \
   bpf-devmap-dynamic-map-value
 #+end_src
 
-
 * Patchset: attempt-3 - no FD zero
 
 *New direction*: Simply avoid FD zero is used by BPF
+- This drops using BTF
 
 Above attempts tried to solve the kABI issue in a too advanced fashion (via
 making it dynamic via BTF). The *real practical issue* is that it is hard to
@@ -231,7 +231,9 @@ Message-ID: <159163498340.1967373.5048584263152085317.stgit@firesoul>
 - [[https://lore.kernel.org/bpf/159163498340.1967373.5048584263152085317.stgit@firesoul/][link]]
 
 ** Patch-1: bpf: syscall to start at file-descriptor 1
+[[https://lore.kernel.org/netdev/159163507753.1967373.62249862728421448.stgit@firesoul/][link]]
 
+#+begin_quote
 This patch change BPF syscall to avoid returning file descriptor value zero.
 
 As mentioned in cover letter, it is very impractical when extending kABI
@@ -244,8 +246,10 @@ exception of getting unused FD starting from 1. The kernel already supports
 starting from a specific FD value, as this is used by f_dupfd(). It seems
 simpler to replicate part of anon_inode_getfd() code and use this start from
 offset feature, instead of using f_dupfd() handling afterwards.
+#+end_quote
 
 ** Patch-2:
+[[https://lore.kernel.org/bpf/159163508261.1967373.10375683361894729822.stgit@firesoul/][link]]
 
 #+begin_quote
 bpf: devmap adjust uapi for attach bpf program
@@ -271,6 +275,7 @@ Fixes: fbee97feed9b ("bpf: Add support to attach bpf program to a devmap entry")
 #+end_quote
 
 ** Patch-3:
+[[https://lore.kernel.org/bpf/159163508769.1967373.9026895070748918567.stgit@firesoul/][link]]
 
 #+begin_quote
 bpf: selftests and tools use struct bpf_devmap_val from uapi
@@ -278,3 +283,82 @@ bpf: selftests and tools use struct bpf_devmap_val from uapi
 Sync tools uapi bpf.h header file and selftests that use struct
 bpf_devmap_val.
 #+end_quote
+
+
+* Patchset: attempt-4
+
+Alexei didn't like patch1, but wanted to patch 2+3.
+- [[https://lore.kernel.org/bpf/20200609013410.5ktyuzlqu5xpbp4a@ast-mbp.dhcp.thefacebook.com/][link]]
+- Message-ID: <20200609013410.5ktyuzlqu5xpbp4a@ast-mbp.dhcp.thefacebook.com>
+
+I disagree, and think patch-1 is a pre-requisite, but it is more important
+to fix the UAPI (ABI) issue of minus-1. So, I can live with the unlikely
+case of getting FD=0 back.
+
+** cover-letter
+Message-ID: <159170947966.2102545.14401752480810420709.stgit@firesoul
+- [[https://lore.kernel.org/bpf/159170947966.2102545.14401752480810420709.stgit@firesoul/][link]]
+
+#+begin_quote
+bpf: adjust uapi for devmap prior to kernel release
+
+For special type maps (e.g. devmap and cpumap) the map-value data-layout is
+a configuration interface. This is uapi that can only be tail extended.
+Thus, new members (and thus features) can only be added to the end of this
+structure, and the kernel uses the map->value_size from userspace to
+determine feature set 'version'.
+
+For this kind of uapi to be extensible and backward compatible, is it common
+that new members/fields (that represent a new feature) in the struct are
+initialized as zero, which indicate that the feature isn't used. This makes
+it possible to write userspace applications that are unaware of new kernel
+features, but just include latest uapi headers, zero-init struct and
+populate features it knows about.
+
+The recent extension of devmap with a bpf_prog.fd requires end-user to
+supply the file-descriptor value minus-1 to communicate that the features
+isn't used. This isn't compatible with the described kABI extension model.
+
+V2: Drop patch-1 that changed BPF-syscall to start at file-descriptor 1
+#+end_quote
+
+*** stg mail
+
+#+begin_src sh
+stg mail --version="bpf V2" --cc meup --edit-cover \
+ --in-reply-to="20200609013410.5ktyuzlqu5xpbp4a@ast-mbp.dhcp.thefacebook.com" \
+ --to ahern --to bpf --cc netdev --cc daniel --to alexei \
+ --cc andrii --cc lore \
+ bpf-devmap-adjust-uapi-for..bpf-selftests-and-tools-use
+#+end_src
+
+** patch:
+
+#+begin_quote
+bpf: devmap adjust uapi for attach bpf program
+
+V2:
+- Defer changing BPF-syscall to start at file-descriptor 1
+- Use {} to zero initialise struct.
+
+The recent commit fbee97feed9b ("bpf: Add support to attach bpf program to a
+devmap entry"), introduced ability to attach (and run) a separate XDP
+bpf_prog for each devmap entry. A bpf_prog is added via a file-descriptor.
+As zero were a valid FD, not using the feature requires using value minus-1.
+The UAPI is extended via tail-extending struct bpf_devmap_val and using
+map->value_size to determine the feature set.
+
+This will break older userspace applications not using the bpf_prog feature.
+Consider an old userspace app that is compiled against newer kernel
+uapi/bpf.h, it will not know that it need to initialise the member
+bpf_prog.fd to minus-1. Thus, users will be forced to update source code to
+get program running on newer kernels.
+
+This patch remove the minus-1 checks, and have zero mean feature isn't used.
+
+Followup patches either for kernel or libbpf should handle and avoid
+returning file-descriptor zero in the first place.
+
+Fixes: fbee97feed9b ("bpf: Add support to attach bpf program to a devmap entry")
+#+end_quote
+
